--- a/css/literal.css
+++ b/css/literal.css
@@ -35,8 +35,9 @@
 .red{color:#f00}
 .purple{color:#a000ff}
 .grey{color:#888}
+.fade{color:rgb(100,100,100)}
 .bold{font-weight: bold;}
-.icon{width:8vw; max-width:20px}
+.icon{width:20%; width:8vw; max-width:20px}
 .icon.mid{max-width:30px}
 .pointer{cursor:pointer}
 .clear-fix{clear:both}
@@ -85,7 +86,7 @@ button.normal{background-color: #c8c8ff;}
 input.okay{border-color:#0f0 !important}
 *.normal:focus{outline:none}
 .option-icon{font-size:16px}
-.back-btn{font-size:16px; padding:2px 10px}
+.back-btn,.nav-btn{font-size:20px; padding:5px 15.1px}
 .code-symbol{font-size:15px; padding:4px 2px;}
 .parental-display{border-left:1px solid #aaa; padding-left:5%;
 margin-left:2%}
