--- a/css/ui.css
+++ b/css/ui.css
@@ -1,11 +1,25 @@
-.window{height:100%; width:100%; position:fixed}
+.window{height:100%; width:100%; position:fixed; z-index:5}
 .curtain{background-color: rgba(100,100,100,0.5);}
-.option-elem{max-height:70vh; z-index:2; position:absolute; background-color: #fff; 
-    box-shadow:2px 2px 2px 2px #aaa; border-radius: 8px;
-}
+.option-elem{max-height:70vh; z-index:2; position:absolute; background-color: #fff; transition: none; height:auto;
+z-index:5}
 .option-elem .option{gap:5%}
+.pointy{transform: rotate(45deg); top:-4px; left:4px; transition: none;}
+.option-elem-ss{
+    background-color: #fff; border-radius: 25px 25px 0px 0px; transition:none; max-height:80%;
+    overflow: auto; height:auto; max-width: 100vw;
+}
 
 /*mini tabs*/
-.minitab{width:100%; overflow:auto; max-height:90%; position:relative;
-background-color: #fff; padding:1%; border-radius: 8px; box-shadow:5px 5px #888}
+.minitab{width:100%; overflow:auto; max-height:85%; z-index:5;
+    background-color: #fff; padding:1%; border-radius: 8px; box-shadow:5px 5px #888}
 .bigscreen-minitab{max-width:500px; height:400px; margin:auto}
+.smallscreen-minitab{border-radius:25px 25px 0px 0px; padding:3%}
+
+/*image sliders*/
+.slider-container{position:relative}
+.slider-container .slide{width:100%; white-space: nowrap; word-wrap: normal; word-break: normal; overflow:auto;
+height:100vh; max-height:250px}
+.slider-container .slide .item{width:100%; display:inline-block; max-height:100%}
+.slider-container .slide img{object-fit: contain; height:90%;}
+.slider-container .nav-btn{background-color: rgba(255,255,255,0.5); color:#000; font-weight: bold;
+position:absolute;}
