--- a/css/ui.css
+++ b/css/ui.css
@@ -1,4 +1,4 @@
-.window{height:100%; width:100%; position:fixed; z-index:5}
+.window{height:100%; width:100%; position:fixed; z-index:100}
 .curtain{background-color: rgba(100,100,100,0.5);}
 .option-elem{max-height:70vh; z-index:2; position:absolute; background-color: #fff; transition: none; height:auto;
 z-index:5}
@@ -9,17 +9,51 @@ z-index:5}
     overflow: auto; height:auto; max-width: 100vw;
 }
 
+/*semi tab*/
+.semitab{width: 100%; max-width: 500px; height: 100%; overflow: auto; margin: auto; z-index: 5; position: relative;
+padding: 2%;}
 /*mini tabs*/
-.minitab{width:100%; overflow:auto; max-height:85%; z-index:5;
-    background-color: #fff; padding:1%; border-radius: 8px; box-shadow:5px 5px #888}
-.bigscreen-minitab{max-width:500px; height:400px; margin:auto}
+.minitab{width:100%; overflow:auto; max-height:90%; z-index:5; 
+    background-color: #fff; padding:1%; border-radius: 8px;}
+.bigscreen-minitab{max-width:700px; height:600px; margin:auto; position: relative;}
 .smallscreen-minitab{border-radius:25px 25px 0px 0px; padding:3%}
+
+/*confirm tabs*/
+.confirm-tab{z-index:101; border-radius: 8px; background-color: #fff; padding:2%; position:relative}
+.confirm-tab .message-box{padding:2%; font-size:15px}
+.confirm-tab .actions{text-align: right;}
+.confirm-tab .actions button{border:none; padding:1.4% 6%; border-radius:25px;}
+.confirm-tab .actions button.confirm{background: #75c2af; margin-right: 20px; color:#fff}
 
 /*image sliders*/
 .slider-container{position:relative}
 .slider-container .slide{width:100%; white-space: nowrap; word-wrap: normal; word-break: normal; overflow:auto;
 height:100vh; max-height:250px}
-.slider-container .slide .item{width:100%; display:inline-block; max-height:100%}
+.slider-container .slide .item{width:100%; max-height:100%; white-space: normal; transition: transform .3s;
+    position:relative; z-index: 0}
+.slider-container .slide .item.no-transition{transition:none}
+.slider-container .slide .item.current{z-index: 1;}
 .slider-container .slide img{object-fit: contain; height:90%;}
 .slider-container .nav-btn{background-color: rgba(255,255,255,0.5); color:#000; font-weight: bold;
-position:absolute;}
+position:absolute; z-index: 2;}
+.slider-container .slider-indicator{text-align:center}
+.slider-container .slider-indicator .item{border:1px solid #c8c8ff; margin-left:10px}
+.slider-container .slider-indicator .item.current{background-color: #ffb630; 
+    transform:scale(1.5)}
+
+/*expanders*/
+.expander{background-color:#75c2af}
+.expander.left{top:0; left:0; height:100%; width:2px; cursor:w-resize}
+.expander.right{top:0; right:0; height:100%;  width:2px; cursor:e-resize}
+.expander.top{top:0; width:100%; height:2px; left:0; cursor:n-resize}
+.expander.bottom{bottom:0; width:100%; height:2px; left:0; cursor: s-resize;}
+
+/*notifications*/
+.yotta-notification{
+    background-color: #75c2af; width:100%; max-width:400px; position: fixed; top:2%; z-index:100;
+    border-radius: 8px;
+}
+.yotta-notification .yotta-notification-top{text-align: right; padding:0% 1%}
+.yotta-notification .yotta-notification-top .yotta-notification-close{color:#fff; font-weight: bold; font-size:14px;
+cursor:pointer}
+.yotta-notification .yotta-notification-message{color:#fff; padding:0% 2% 2% 2%; font-size: 15px;}
