--- a/css/literal.css
+++ b/css/literal.css
@@ -1,4 +1,4 @@
-.my-fonts{box-sizing: border-box; word-break:break-word; word-wrap: break-word; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+.my-fonts,.my-fonts *{box-sizing: border-box; word-break:break-word; word-wrap: break-word; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .left{left:0}
 .top{top:0}
@@ -19,12 +19,16 @@
 .column{flex-direction: column;}
 .hcenter{justify-content: center;}
 .vcenter{align-items: center;}
+.vend{align-items: flex-end;}
 .apart{justify-content:space-between}
+.space-around{justify-content: space-around;}
+.space-evenly{justify-content: space-evenly;}
 .flex-end{justify-content:flex-end}
 .minor-gap{gap:3%}
 .space-up{margin-top: 2%;}
 .space-down{margin-bottom:2%}
 .space-left{margin-left:2%}
+.space-right{margin-right:2%}
 .space-inside{padding:2%}
 .no-border{border:none}
 .round{border-radius: 50%;}
@@ -35,10 +39,14 @@
 .red{color:#f00}
 .purple{color:#a000ff}
 .grey{color:#888}
+.transparent{color:transparent}
 .fade{color:rgb(100,100,100)}
 .bold{font-weight: bold;}
+.normal-text{font-weight: normal !important;}
 .icon{width:20%; width:8vw; max-width:20px}
 .icon.mid{max-width:30px}
+.icon.max{max-width:50px}
+.texticon{font-size:25px; font-weight: bold;}
 .pointer{cursor:pointer}
 .clear-fix{clear:both}
 .center-text{text-align: center;}
@@ -50,12 +58,15 @@
 .my-shadow{box-shadow: 2px 2px 10px #aaa;}
 .full-width{width:100%}
 .full-height{height:100%}
-.error{color:#f00; font-size:13px}
+.error{color:#f00 !important;}
 .okay{color:#0f0}
 .orange-bg{background-color: #ffb630 !important;}
 .purple-bg{background-color:#a000ff;}
 .white-bg{background-color: #fff;}
 .black-bg{background-color: #000;}
+.navy-bg{background-color: #000030;}
+.grey-bg{background-color: #808080;}
+.red-bg{background-color: #f00 !important;}
 .small-text{font-size:12px}
 .medium-text{font-size: 14px;}
 .big-text{font-size:18px}
@@ -67,18 +78,24 @@
 input.error{border-color:#f00 !important;}
 input.normal{border-bottom:2px solid #ffb630}
 button.normal{background-color: #c8c8ff;}
-
+.blink{animation-name:blink; animation-duration:1s; animation-iteration-count: infinite;
+animation-timing-function: ease-in-out;}
+.invisible{opacity:0}
+.scroll-n-view{transition: .5s;}
+.scroll-n-view.visible{opacity:1}
+.fit-object{object-fit: cover;}
+.webkit-bg-clip-text{-webkit-background-clip: text;}
 /*special*/
     /*toggle*/
-.toggle-container{width:40px; height:20px; border-radius: 25px;
-    background-color: #c8c8ff; display:flex; align-items: center;
+.toggle-container{width:40px; height:20px; border-radius: 25px; display:block;
+    background-color: #c8c8ff; display:flex; align-items: center; position:relative
 }
 .toggle-container input[type=checkbox]{border:none; opacity:0; 
     cursor:pointer; height:100%; width:100%; margin:0; padding:0;
-    box-sizing: border-box; z-index:1
+    box-sizing: border-box; z-index:1; position: absolute;
 }
 .toggle-container span.round{background-color: #fff; height:20px; width:20px;
-    transition:.5s;
+    transition:.5s; position:absolute; left:0
 }
 .toggle-container input[type=checkbox]:checked + span.round{
     background-color: #ffb630; transform:translate(20px,0)
@@ -86,17 +103,26 @@ button.normal{background-color: #c8c8ff;}
 input.okay{border-color:#0f0 !important}
 *.normal:focus{outline:none}
 .option-icon{font-size:16px}
-.back-btn,.nav-btn{font-size:20px; padding:5px 15.1px}
+.back-btn,.nav-btn{font-size:20px; padding:7.5px 15.1px}
 .code-symbol{font-size:15px; padding:4px 2px;}
 .parental-display{border-left:1px solid #aaa; padding-left:5%;
 margin-left:2%}
-.custom-alert{animation-name: fade; animation-duration:3s}
+.custom-alert{z-index: 1000}
+
+.progress-loader{padding:2%; max-width: 200px; text-align: center; margin: auto;}
+.progress-loader .progress{border:1px solid #75c2af; border-radius: 25px; margin: auto;}
+.progress-loader .progress .indicator{background-color: #75c2af; padding:2%; border-radius: 25px; max-width: 100%;
+transition:.1s}
 
 @keyframes fade{
     50%{opacity:0.3}
     100%{opacity:1}
 }
-
+@keyframes blink{
+    0%{opacity:1}
+    50%{opacity:0}
+    100%{opacity:1}
+}
 /*transitions*/
 .zoom{transition: transform .2s;}
 
